--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Data structure based on combination of the tree and arrays (in future releases - linked arraylists)",
   "main": "index.js",
-  "scripts": {    
-    "test": "mocha -r ts-node/register src/**/*.spec.ts"
+  "scripts": {
+    "test": "mocha --opts mocha.opts"
   },
   "keywords": [
     "silmaril",
@@ -14,13 +14,11 @@
   "author": "darthven",
   "license": "ISC",
   "devDependencies": {
-    "@types/mocha": "^2.2.41",
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^2.2.48",
     "@types/node": "^7.0.32",
-    "babel-cli": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.3",
     "mocha": "^5.0.0",
     "reflect-metadata": "^0.1.10",
     "source-map-support": "^0.4.15",
@@ -32,6 +30,8 @@
     "webpack": "^3.10.0"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   }
 }
