--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {  
-    "target": "es5",
-    "module": "esnext",
+    "target": "esnext",
+    "module": "commonjs",
     "sourceMap": true,
     "experimentalDecorators": true,
     "lib": [ "dom", "es6", "es5", "es2017", "es2018"]
